--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -64,13 +64,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 2.3rem;
-      width: 2.3rem;
+      height: 5rem;
+      width: 5rem;
       a {
         text-decoration: none;
         color: $black;
+        font-size: 4rem;
         i {
-          padding: .4rem;
+          font-weight: lighter;
+          padding: .5rem;
           color: $black;
           &:hover {
             color: $orange;
