add content in donate

--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2546,6 +2546,69 @@ footer {
     font-size: 18px; } }
 
 /*--------------------------------------------------------------
+# Donate-Page
+--------------------------------------------------------------*/
+.page-id-30 .content-area {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center; }
+  .page-id-30 .content-area .site-main {
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap; }
+    .page-id-30 .content-area .site-main article {
+      margin: 0; }
+      .page-id-30 .content-area .site-main article header {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center;
+        position: relative;
+        background: #f5a623;
+        width: 100%;
+        min-height: 118px;
+        color: #000000; }
+        @media screen and (min-width: 480px) {
+          .page-id-30 .content-area .site-main article header {
+            min-height: 160px; } }
+        .page-id-30 .content-area .site-main article header .donate-btn {
+          background-color: #F91E72;
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          z-index: 3;
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center;
+          height: 5rem;
+          width: 5rem; }
+          .page-id-30 .content-area .site-main article header .donate-btn a {
+            text-decoration: none;
+            color: #000000;
+            font-size: 4rem; }
+            .page-id-30 .content-area .site-main article header .donate-btn a i {
+              font-weight: lighter;
+              padding: .5rem;
+              color: #000000; }
+              .page-id-30 .content-area .site-main article header .donate-btn a i:hover {
+                color: #f5a623; }
+            .page-id-30 .content-area .site-main article header .donate-btn a p {
+              display: none; }
+        .page-id-30 .content-area .site-main article header .entry-meta {
+          display: none; }
+    @media screen and (min-width: 480px) {
+      .page-id-30 .content-area .site-main {
+        width: 1024px; } }
+
+/*--------------------------------------------------------------
 # Contact-us-Page
 --------------------------------------------------------------*/
 .page-id-51 .content-area {
