--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -48,7 +48,7 @@
   // Donate-btn 
   // Example
   // 	<div class="donate-btn">
-  // 	<a href="<?php echo esc_url( get_permalink(get_page_by_title( 'donate' )) ) ?>">
+  // 	<a href="<?php echo esc_url( get_permalink((get_page_by_path( 'donate' )) ) ?>">
   // 		<i class="fa fa-heart-o" aria-hidden="true">
   // 			<p>Donate</p>
   // 		</i>
@@ -64,12 +64,19 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 5rem;
-      width: 5rem;
+      height: 2.3rem;
+      width: 2.3rem;
+      @media screen and (min-width: $mobile_width) {
+        height: 5rem;
+        width: 5rem;
+      }
       a {
         text-decoration: none;
         color: $black;
-        font-size: 4rem;
+        font-size: 1rem;
+        @media screen and (min-width: $mobile_width) {
+          font-size: 4rem;
+        }
         i {
           font-weight: lighter;
           padding: .5rem;
