--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1570,12 +1570,19 @@ object {
             justify-content: center;
         -ms-flex-align: center;
             align-items: center;
-        height: 5rem;
-        width: 5rem; }
+        height: 2.3rem;
+        width: 2.3rem; }
+        @media screen and (min-width: 480px) {
+          .blog .content-area .site-main .site-header .donate-btn {
+            height: 5rem;
+            width: 5rem; } }
         .blog .content-area .site-main .site-header .donate-btn a {
           text-decoration: none;
           color: #000000;
-          font-size: 4rem; }
+          font-size: 1rem; }
+          @media screen and (min-width: 480px) {
+            .blog .content-area .site-main .site-header .donate-btn a {
+              font-size: 4rem; } }
           .blog .content-area .site-main .site-header .donate-btn a i {
             font-weight: lighter;
             padding: .5rem;
@@ -1598,12 +1605,19 @@ object {
             justify-content: center;
         -ms-flex-align: center;
             align-items: center;
-        height: 5rem;
-        width: 5rem; }
+        height: 2.3rem;
+        width: 2.3rem; }
+        @media screen and (min-width: 480px) {
+          .blog .content-area .site-main .site-header .donate-btn {
+            height: 5rem;
+            width: 5rem; } }
         .blog .content-area .site-main .site-header .donate-btn a {
           text-decoration: none;
           color: #000000;
-          font-size: 4rem; }
+          font-size: 1rem; }
+          @media screen and (min-width: 480px) {
+            .blog .content-area .site-main .site-header .donate-btn a {
+              font-size: 4rem; } }
           .blog .content-area .site-main .site-header .donate-btn a i {
             font-weight: lighter;
             padding: .5rem;
@@ -1726,12 +1740,19 @@ object {
               justify-content: center;
           -ms-flex-align: center;
               align-items: center;
-          height: 5rem;
-          width: 5rem; }
+          height: 2.3rem;
+          width: 2.3rem; }
+          @media screen and (min-width: 480px) {
+            .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header .donate-btn {
+              height: 5rem;
+              width: 5rem; } }
           .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header .donate-btn a {
             text-decoration: none;
             color: #000000;
-            font-size: 4rem; }
+            font-size: 1rem; }
+            @media screen and (min-width: 480px) {
+              .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header .donate-btn a {
+                font-size: 4rem; } }
             .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header .donate-btn a i {
               font-weight: lighter;
               padding: .5rem;
@@ -1836,12 +1857,19 @@ object {
               justify-content: center;
           -ms-flex-align: center;
               align-items: center;
-          height: 5rem;
-          width: 5rem; }
+          height: 2.3rem;
+          width: 2.3rem; }
+          @media screen and (min-width: 480px) {
+            .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .page-header .donate-btn {
+              height: 5rem;
+              width: 5rem; } }
           .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .page-header .donate-btn a {
             text-decoration: none;
             color: #000000;
-            font-size: 4rem; }
+            font-size: 1rem; }
+            @media screen and (min-width: 480px) {
+              .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .page-header .donate-btn a {
+                font-size: 4rem; } }
             .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .page-header .donate-btn a i {
               font-weight: lighter;
               padding: .5rem;
@@ -1957,12 +1985,19 @@ object {
               justify-content: center;
           -ms-flex-align: center;
               align-items: center;
-          height: 5rem;
-          width: 5rem; }
+          height: 2.3rem;
+          width: 2.3rem; }
+          @media screen and (min-width: 480px) {
+            .single-gallery .content-area .site-main article .entry-header .donate-btn {
+              height: 5rem;
+              width: 5rem; } }
           .single-gallery .content-area .site-main article .entry-header .donate-btn a {
             text-decoration: none;
             color: #000000;
-            font-size: 4rem; }
+            font-size: 1rem; }
+            @media screen and (min-width: 480px) {
+              .single-gallery .content-area .site-main article .entry-header .donate-btn a {
+                font-size: 4rem; } }
             .single-gallery .content-area .site-main article .entry-header .donate-btn a i {
               font-weight: lighter;
               padding: .5rem;
@@ -1987,12 +2022,19 @@ object {
               justify-content: center;
           -ms-flex-align: center;
               align-items: center;
-          height: 5rem;
-          width: 5rem; }
+          height: 2.3rem;
+          width: 2.3rem; }
+          @media screen and (min-width: 480px) {
+            .single-gallery .content-area .site-main article .entry-header .donate-btn {
+              height: 5rem;
+              width: 5rem; } }
           .single-gallery .content-area .site-main article .entry-header .donate-btn a {
             text-decoration: none;
             color: #000000;
-            font-size: 4rem; }
+            font-size: 1rem; }
+            @media screen and (min-width: 480px) {
+              .single-gallery .content-area .site-main article .entry-header .donate-btn a {
+                font-size: 4rem; } }
             .single-gallery .content-area .site-main article .entry-header .donate-btn a i {
               font-weight: lighter;
               padding: .5rem;
@@ -2396,12 +2438,19 @@ footer {
         justify-content: center;
     -ms-flex-align: center;
         align-items: center;
-    height: 5rem;
-    width: 5rem; }
+    height: 2.3rem;
+    width: 2.3rem; }
+    @media screen and (min-width: 480px) {
+      .entry-header .donate-btn {
+        height: 5rem;
+        width: 5rem; } }
     .entry-header .donate-btn a {
       text-decoration: none;
       color: #000000;
-      font-size: 4rem; }
+      font-size: 1rem; }
+      @media screen and (min-width: 480px) {
+        .entry-header .donate-btn a {
+          font-size: 4rem; } }
       .entry-header .donate-btn a i {
         font-weight: lighter;
         padding: .5rem;
@@ -2590,12 +2639,19 @@ footer {
               justify-content: center;
           -ms-flex-align: center;
               align-items: center;
-          height: 5rem;
-          width: 5rem; }
+          height: 2.3rem;
+          width: 2.3rem; }
+          @media screen and (min-width: 480px) {
+            .page-id-30 .content-area .site-main article header .donate-btn {
+              height: 5rem;
+              width: 5rem; } }
           .page-id-30 .content-area .site-main article header .donate-btn a {
             text-decoration: none;
             color: #000000;
-            font-size: 4rem; }
+            font-size: 1rem; }
+            @media screen and (min-width: 480px) {
+              .page-id-30 .content-area .site-main article header .donate-btn a {
+                font-size: 4rem; } }
             .page-id-30 .content-area .site-main article header .donate-btn a i {
               font-weight: lighter;
               padding: .5rem;
@@ -2606,6 +2662,99 @@ footer {
               display: none; }
         .page-id-30 .content-area .site-main article header .entry-meta {
           display: none; }
+      .page-id-30 .content-area .site-main article .entry-content {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center; }
+        .page-id-30 .content-area .site-main article .entry-content .support-donate {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center;
+          -ms-flex-flow: column wrap;
+              flex-flow: column wrap;
+          text-align: center; }
+          .page-id-30 .content-area .site-main article .entry-content .support-donate .p1 {
+            font-size: 22px;
+            width: 50%; }
+          .page-id-30 .content-area .site-main article .entry-content .support-donate p {
+            width: 90%; }
+            .page-id-30 .content-area .site-main article .entry-content .support-donate p a {
+              text-decoration: none;
+              font-size: 22px;
+              color: #000000;
+              background: #F91E72;
+              display: -ms-flexbox;
+              display: flex;
+              -ms-flex-pack: center;
+                  justify-content: center;
+              -ms-flex-align: center;
+                  align-items: center;
+              height: 61px;
+              width: 100%; }
+              .page-id-30 .content-area .site-main article .entry-content .support-donate p a:hover, .page-id-30 .content-area .site-main article .entry-content .support-donate p a:active, .page-id-30 .content-area .site-main article .entry-content .support-donate p a:focus {
+                color: #f5a623; }
+        .page-id-30 .content-area .site-main article .entry-content .detail-donate {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center;
+          -ms-flex-flow: column wrap;
+              flex-flow: column wrap;
+          width: 90%; }
+          .page-id-30 .content-area .site-main article .entry-content .detail-donate p {
+            font-size: 12px; }
+        .page-id-30 .content-area .site-main article .entry-content .meta-donate {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-flow: column wrap;
+              flex-flow: column wrap;
+          width: 90%; }
+          .page-id-30 .content-area .site-main article .entry-content .meta-donate p {
+            font-size: 12px;
+            margin-top: 0; }
+        .page-id-30 .content-area .site-main article .entry-content .image-position {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center;
+          -ms-flex-flow: row nowrap;
+              flex-flow: row nowrap;
+          width: 100%;
+          height: 208px; }
+          .page-id-30 .content-area .site-main article .entry-content .image-position .image {
+            position: relative;
+            width: 95%;
+            height: 100%;
+            overflow: hidden;
+            background: #45cdcb;
+            padding: 15px; }
+            .page-id-30 .content-area .site-main article .entry-content .image-position .image img {
+              min-height: 100%;
+              width: auto;
+              min-width: 100%;
+              left: 50%;
+              top: 80%;
+              transform: translate(-50%, -70%);
+              max-width: none;
+              position: absolute; }
+          .page-id-30 .content-area .site-main article .entry-content .image-position .margin {
+            width: 5%;
+            height: 100%;
+            background: #45cdcb; }
     @media screen and (min-width: 480px) {
       .page-id-30 .content-area .site-main {
         width: 1024px; } }
@@ -2653,12 +2802,19 @@ footer {
               justify-content: center;
           -ms-flex-align: center;
               align-items: center;
-          height: 5rem;
-          width: 5rem; }
+          height: 2.3rem;
+          width: 2.3rem; }
+          @media screen and (min-width: 480px) {
+            .page-id-51 .content-area .site-main article header .donate-btn {
+              height: 5rem;
+              width: 5rem; } }
           .page-id-51 .content-area .site-main article header .donate-btn a {
             text-decoration: none;
             color: #000000;
-            font-size: 4rem; }
+            font-size: 1rem; }
+            @media screen and (min-width: 480px) {
+              .page-id-51 .content-area .site-main article header .donate-btn a {
+                font-size: 4rem; } }
             .page-id-51 .content-area .site-main article header .donate-btn a i {
               font-weight: lighter;
               padding: .5rem;
