--- a/themes/sgsc/sass/_donate.scss
+++ b/themes/sgsc/sass/_donate.scss
@@ -25,12 +25,25 @@
           align-items: center;
           flex-flow: column wrap;
           text-align: center;
+          width: 100%;
+          @media screen and (min-width: $mobile_width) {
+            width: 50%;
+            padding: 64px;
+          }
           .p1 {
             font-size: $font_m-h1;
             width: 50%;
+            @media screen and (min-width: $mobile_width) {
+              font-size: $font_d-h1;
+              width: 100%;
+              line-height: 3.5rem;
+            }
           }
           p {
             width: 90%;
+            @media screen and (min-width: $mobile_width) {
+              width: 100%;
+            }
             a {
               text-decoration: none;
               font-size: $font_m-h1;
@@ -44,6 +57,11 @@
               @include hover-state {
                 color: $orange;
               }
+              @media screen and (min-width: $mobile_width) {
+                padding: 45px 0;
+                font-size: $font_d-h1;
+                font-weight: 300;
+              }
             }
           }
         }
@@ -53,8 +71,20 @@
           align-items: center;
           flex-flow: column wrap;
           width: 90%;
+          @media screen and (min-width: $mobile_width) {
+            width: 50%;
+            padding: 64px;
+            padding-left: 0;
+            align-items: flex-start;
+          }
           p {
             font-size: $font_m-body;
+            @media screen and (min-width: $mobile_width) {
+              width: 448px;
+              font-size: $font_d-sub-body;
+              margin-bottom: 0;
+              line-height: 1.4rem;
+            }
           }
         }
         .meta-donate {
@@ -62,9 +92,19 @@
           justify-content: center;
           flex-flow: column wrap;
           width: 90%;
+          @media screen and (min-width: $mobile_width) {
+            padding: 64px;
+            width: 50%;
+            flex-flow: column wrap;
+          }
           p {
             font-size: $font_m-body;
             margin-top: 0;
+            @media screen and (min-width: $mobile_width) {
+              font-size: $font_d-sub-body;
+              line-height: 1.4rem;
+              padding-right: 2rem;
+            }
           }
         }
         .image-position {
@@ -74,6 +114,10 @@
           flex-flow: row nowrap;
           width: 100%;
           height: 208px;
+          @media screen and (min-width: $mobile_width) {
+            width: 50%;
+            height: 327px;
+          }
           .image {
             position: relative;
             width: 95%;
