--- a/themes/sgsc/sass/_header.scss
+++ b/themes/sgsc/sass/_header.scss
@@ -67,6 +67,9 @@
   align-items: center;
   height: 4rem;
   z-index: -1;
+  @media screen and (min-width: 480px) {
+    width: initial;
+  }
 }
 
 .logo-text {
