--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -1,3 +1,29 @@
+//popup
+
+#popmake-286 {
+    padding: 0;
+}
+
+.mc4wp-checkbox { 
+    display: none;
+}
+
+#popmake-286 button  {
+    right: initial;
+    top: initial;
+    bottom: 45px;
+}
+
+.pum-content h1 {
+    text-align: center;
+    font-family: $font__header;
+    font-size: $font_m-h1;
+    color: $black;
+    background: $blue;
+}
+
+
+
 footer {
     max-width: 1024px;
     margin: auto;
