--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2140,6 +2140,24 @@ object {
         .single-gallery .content-area .site-main .m-button p {
           padding: 0rem 1.5rem; } }
 
+#popmake-286 {
+  padding: 0; }
+
+.mc4wp-checkbox {
+  display: none; }
+
+#popmake-286 button {
+  right: initial;
+  top: initial;
+  bottom: 45px; }
+
+.pum-content h1 {
+  text-align: center;
+  font-family: montserrat, merriweather, sans-serif;
+  font-size: 22px;
+  color: #000000;
+  background: #45cdcb; }
+
 footer {
   max-width: 1024px;
   margin: auto; }
