--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -2,13 +2,17 @@
 
 #popmake-286 {
     padding: 0;
+    height: 350px;
+    width: 290px;
+    border: 3px solid #000;
+    background-color: #fff;
 }
 
 .mc4wp-checkbox { 
     display: none;
 }
 
-#popmake-286 button  {
+#popmake-286 button {
     right: initial;
     top: initial;
     bottom: 45px;
@@ -16,12 +20,106 @@
 
 .pum-content h1 {
     text-align: center;
-    font-family: $font__header;
-    font-size: $font_m-h1;
-    color: $black;
-    background: $blue;
+    font-family: montserrat,merriweather,sans-serif;
+    font-size: 22px;
+    color: #000;
+    background: #45cdcb;
+    margin: 0;
 }
 
+.popup-head p {
+    margin: 0;
+}
+
+.popup-head {
+    background: #45cdcb;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.popup-body {
+    width: 224px;
+    height: 76px;
+    text-align: center;
+    margin: auto;
+}
+
+.popup-body p {
+    font-family: montserrat,merriweather,sans-serif;
+    font-size: 16px;
+    color: #000;
+}
+
+#popmake-286 button {
+    right: 0;
+    top: auto;
+    bottom: 24px;
+    left: 24px;
+    background: none;
+    border: none;
+    color: #000;
+    font-family: lato,novecentosanswide,sans-serif;
+    font-weight: 400;
+    padding: 0;
+}
+
+input.wpcf7-text {
+    border: 2px solid #000;
+    border-radius: 0;
+    background-color: #d8d8d8;
+}
+
+.wpcf7-text, input.wpcf7-text {
+    height: 28px;
+    width: 224px;
+}
+
+.popup-send {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    padding-top: 20px;
+    padding-right: 15px;
+}
+
+input.wpcf7-submit {
+    font-family: montserrat,merriweather,sans-serif;
+    background: #fff;
+    border: 2px solid #000;
+    width: 81px;
+    padding: 0;
+    border-radius: 0;
+    color: #000;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+}
+
+#popmake-286 button {
+    right: 0;
+    top: auto;
+    bottom: 24px;
+    left: 24px;
+    background: none;
+    border: none;
+    color: #000;
+    font-family: lato,novecentosanswide,sans-serif;
+    font-weight: 400;
+    padding: 0;
+}
+
+.popup-entry {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-align: center;
+    align-items: center;
+    font-family: lato,novecentosanswide,sans-serif;
+    font-size: 12px;
+    color: #000;
+}
 
 
 footer {
