--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -4,8 +4,8 @@
     padding: 0;
     height: 350px;
     width: 290px;
-    border: 3px solid #000;
-    background-color: #fff;
+    border: 3px solid $black;
+    background-color: $white;
 }
 
 .mc4wp-checkbox { 
@@ -22,8 +22,8 @@
     text-align: center;
     font-family: montserrat,merriweather,sans-serif;
     font-size: 22px;
-    color: #000;
-    background: #45cdcb;
+    color: $black;
+    background: $blue;
     margin: 0;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .popup-head {
-    background: #45cdcb;
+    background: $blue;
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -47,7 +47,7 @@
 .popup-body p {
     font-family: montserrat,merriweather,sans-serif;
     font-size: 16px;
-    color: #000;
+    color: $black;
 }
 
 #popmake-286 button {
@@ -57,14 +57,14 @@
     left: 24px;
     background: none;
     border: none;
-    color: #000;
+    color: $black;
     font-family: lato,novecentosanswide,sans-serif;
     font-weight: 400;
     padding: 0;
 }
 
 input.wpcf7-text {
-    border: 2px solid #000;
+    border: 2px solid $black;
     border-radius: 0;
     background-color: #d8d8d8;
 }
@@ -86,11 +86,11 @@ input.wpcf7-text {
 input.wpcf7-submit {
     font-family: montserrat,merriweather,sans-serif;
     background: #fff;
-    border: 2px solid #000;
+    border: 2px solid $black;
     width: 81px;
     padding: 0;
     border-radius: 0;
-    color: #000;
+    color: $black;
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -103,7 +103,7 @@ input.wpcf7-submit {
     left: 24px;
     background: none;
     border: none;
-    color: #000;
+    color: $black;
     font-family: lato,novecentosanswide,sans-serif;
     font-weight: 400;
     padding: 0;
@@ -118,7 +118,7 @@ input.wpcf7-submit {
     align-items: center;
     font-family: lato,novecentosanswide,sans-serif;
     font-size: 12px;
-    color: #000;
+    color: $black;
 }
 
 
