--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2989,10 +2989,47 @@ footer {
 
 .events-archive .event-header {
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  height: 13rem;
+  position: relative; }
+
+.events-archive .tribe-events-list-event-title {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 5rem;
+  background: #f5a623;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin: 0;
+  text-align: center;
+  font-weight: lighter; }
+
+.events-archive .tribe-events-event-image {
+  width: 100% !important;
+  height: 100%;
+  position: absolute;
+  overflow: hidden; }
+  .events-archive .tribe-events-event-imageimg {
+    height: auto;
+    position: absolute;
+    width: 23rem;
+    left: 0;
+    max-width: none;
+    bottom: 0; }
+
+.events-archive .event-backup-img {
+  height: 100%;
+  padding: 1rem; }
+
+.events-archive .event-bar {
+  width: 1.5rem;
+  background-color: #45cdcb;
+  z-index: 1; }
 
 .events-archive .title-events-archive {
-  position: relative; }
+  position: relative;
+  margin-bottom: 2rem; }
 
 .events-archive .events-title {
   display: -ms-flexbox;
@@ -3004,3 +3041,30 @@ footer {
   width: 100vw;
   height: 7.3rem;
   background-color: #f5a623; }
+
+.events-archive .type-tribe_events {
+  border: none;
+  padding: 0; }
+
+.events-archive .tribe-events-event-meta {
+  border: none;
+  background: none;
+  margin: 0;
+  padding: 0; }
+
+.events-archive .tribe-events-venue-details {
+  border: none;
+  margin: 0; }
+
+.events-archive .tribe-events-event-cost {
+  display: inline;
+  float: left; }
+
+.events-archive .tribe-events-event-cost span {
+  border: none;
+  background: none;
+  font-weight: normal;
+  text-align: left; }
+
+.events-archive #tribe-events .tribe-events-content {
+  padding: 0 1rem; }
