--- a/themes/sgsc/sass/_header.scss
+++ b/themes/sgsc/sass/_header.scss
@@ -34,6 +34,11 @@
     border: 2px solid $orange;
     border-radius: 25px;
     font-family: $font__header;
+    right: 0;
+    top: 50px;
+    position: absolute;
+    width: 85%;
+    line-height: 3;
   }
 }
 
