--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3002,13 +3002,16 @@ footer {
   position: absolute;
   right: 0;
   top: 0;
-  width: 5rem;
+  width: 5.2rem;
   background: #f5a623;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   margin: 0;
   text-align: center;
-  font-weight: lighter; }
+  font-weight: lighter;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto; }
 
 .events-archive .tribe-events-event-image {
   width: 100% !important;
@@ -3025,7 +3028,8 @@ footer {
 
 .events-archive .event-backup-img {
   height: 100%;
-  padding: 1rem; }
+  padding: 1rem;
+  opacity: 0.3; }
 
 .events-archive .event-bar {
   width: 1.5rem;
