--- a/themes/sgsc/sass/_single-gallery.scss
+++ b/themes/sgsc/sass/_single-gallery.scss
@@ -36,7 +36,7 @@
               flex-flow: row wrap;
               margin-bottom: 0;
             }
-            figure {
+            .thumbnail {
               display: flex;
               margin: 0;
               padding: 0;
@@ -47,30 +47,22 @@
               position: relative;
               overflow: hidden;
               @media screen and (min-width: $mobile_width) {
-                width: 463px;
+                width: $image-d-width;
                 height: 321px;
                 min-width: initial;
-                margin-bottom: 35px;
+                margin-bottom: 32px;
               }
-              .gallery-icon {
-                width: 100%;
-                position: relative;
-                a {
-                  pointer-events: none;
-                  cursor: default;
-                  img {
-                    min-height: 100%;
-                    max-height: 150%;
-                    width: auto;
-                    min-width: 100%;
-                    left: 50%;
-                    top: 70%;
-                    transform: translate(-50%, -70%);
-                    max-width: none;
-                    position: absolute;
-                    @media screen and (min-width: $mobile_width) {}
-                  }
-                }
+              img {
+                min-height: 100%;
+                max-height: 150%;
+                width: auto;
+                min-width: 100%;
+                left: 50%;
+                top: 70%;
+                transform: translate(-50%, -70%);
+                max-width: none;
+                position: absolute;
+                @media screen and (min-width: $mobile_width) {}
               }
             }
           }
