--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -6,6 +6,7 @@
 $mobile_width: 480px;
 $d_width:1024px;
 $desktop-view: 600px;
+$image-d-width: 496px;
 // Colors
 $black: #000000;
 $white: #ffffff;
