--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -641,6 +641,8 @@ a {
 
 .nav-menu {
   display: none; }
+  .nav-menu li:first-child {
+    display: none; }
 
 /* Small menu. */
 .menu-toggle,
@@ -702,6 +704,8 @@ a {
     border: 4px solid #f5a623; }
   .menu-visible li:hover {
     border: 4px solid black; }
+  .menu-visible li:first-child {
+    display: initial; }
   .menu-visible a {
     color: black; }
 
