--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -1,3 +1,35 @@
 .page-template-page-about .entry-title {
   display: none;
 }
+
+.entry-content h1 {
+  display: flex;
+  width: 1024px;
+  height: 140px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(1, 255,255,0.8); 
+}
+
+.entry-content a {
+  color: $black;
+  text-decoration: none;
+}
+
+.about-header {
+  display: flex;  
+  width: 100%;
+  height: 194px;
+}
+
+.entry-content p {
+    background: $orange;
+    width: 417px;
+    height: 6rem;
+    border: 4px solid $orange;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;	
+    margin: auto;
+}
