--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1864,27 +1864,28 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
       align-items: center;
       -ms-flex-pack: center;
       justify-content: center;
-      background-color: rgba(1, 255, 255, 0.8);
-    }
-    .entry-content a {
-      color: #000000;
-      text-decoration: none;
-    }
-    .about-header {
-      display: -ms-flexbox;
-      display: flex;
-      width: 100%;
-      height: 194px;
-    }
-    .entry-content p {
-      background: #f5a623;
-      width: 417px;
-      height: 6rem;
-      border: 4px solid #f5a623;
-      text-align: center;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: center;
+  background-color: rgba(1, 255, 255, 0.81);
+  margin: 0; }
+
+.entry-content a {
+  color: #000000;
+  text-decoration: none; }
+
+.about-links {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.about-links p {
+  box-sizing: border-box;
+  background: #f5a623;
+  width: 417px;
+  height: 150px;
+  border: 4px solid #f5a623;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
       justify-content: center;
       -ms-flex-align: center;
       align-items: center;
