styled about-us page

--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1867,7 +1867,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   background-color: rgba(1, 255, 255, 0.81);
   margin: 0; }
 
-.entry-content a {
+.about-content a {
   color: #000000;
   text-decoration: none; }
 
