--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.entry-content h1 {
+.about-content h1 {
   display: flex;
   width: 1024px;
   height: 140px;
@@ -11,7 +11,7 @@
   background-color: rgba(1, 255,255,0.8); 
 }
 
-.entry-content a {
+.about-content a {
   color: $black;
   text-decoration: none;
 }
