--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -8,9 +8,14 @@
   height: 140px;
   align-items: center;
   justify-content: center;
-  background-color: rgba(1, 255,255,0.8); 
+  background-color: rgba(1, 255,255,0.8);
+  margin: 0; 
 }
 
+.about-links {
+  display: flex;
+  flex-wrap: wrap;
+}
 .about-content a {
   color: $black;
   text-decoration: none;
@@ -22,14 +27,23 @@
   height: 194px;
 }
 
-.entry-content p {
+.about-links p {
     background: $orange;
     width: 417px;
-    height: 6rem;
+    height: 150px;
     border: 4px solid $orange;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;	
-    margin: auto;
+    margin: 63px 0 0 0;
+    
+    &:nth-child(even) {
+      margin-left: 63px;
+      margin-right: 31.5px;
+    }
+    &:nth-child(odd) {
+      margin-right: 63px;
+      margin-left: 31.5px;
+    }
 }
