--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -63,7 +63,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "header";
 @import "front-page";
-@import "index";
+@import "home";
 @import "archive-gallery";
 @import "single-gallery";
 @import "footer";
