--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -49,6 +49,7 @@
                 top: 70%;
                 transform: translate(-50%, -70%);
                 max-width: none;
+                object-fit: cover;
                 position: absolute;
               }
             }
@@ -109,6 +110,7 @@
                 min-height: 100%;
                 max-height: 100%;
                 width: auto;
+                object-fit: cover;
                 min-width: 100%;
                 left: 50%;
                 top: 70%;
