--- a/themes/sgsc/sass/_single-gallery.scss
+++ b/themes/sgsc/sass/_single-gallery.scss
@@ -56,6 +56,7 @@
                 min-height: 100%;
                 max-height: 150%;
                 width: auto;
+                object-fit: cover;
                 min-width: 100%;
                 left: 50%;
                 top: 70%;
