fix over-nesting issue

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -74,3 +74,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "donate";
 @import "contact-us";
 @import "events";
+@import "single";
