--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -1,106 +1,40 @@
-/*--------------------------------------------------------------
+  /*--------------------------------------------------------------
 # Archive-Gallery
 --------------------------------------------------------------*/
-
-.post-type-archive-gallery .content-area {
-  display: flex;
-  justify-content: center;
-  .site-main {
-    width: $d_width;
+  
+  .post-type-archive-gallery .content-area {
     display: flex;
-    flex-flow: column nowrap;
-  }
-}
-
-.post-type-archive-gallery .featured-gallery-section {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: $margin-d;
-  .page-header {
-    @include page-header;
-  }
-}
-
-.post-type-archive-gallery .gallery-album {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  .gallery {
-    width: 100%;
-    height: 320px;
-    margin: 0;
-    margin-top: $margin-d;
-    @include border;
-    .entry-header {
-      width: 100%;
-      height: 100%;
+    justify-content: center;
+    .site-main {
+      width: $d_width;
       display: flex;
-      position: relative;
-      overflow: hidden;
-      justify-content: center;
-      align-items: center;
-      .image-position {
-        height: 100%;
-        img {
-          min-height: 100%;
-          max-height: 100%;
-          width: auto;
-          min-width: 100%;
-          left: 50%;
-          top: 70%;
-          transform: translate(-50%, -70%);
-          max-width: none;
-          object-fit: cover;
-          position: absolute;
-        }
-      }
-      .entry-title {
-        background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-        z-index: 1;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        color: $black;
-        &:hover {
-          color: $orange;
-        }
-        h2 {
-          font-size: $font_m-h1;
-        }
-      }
+      flex-flow: column nowrap;
     }
   }
-}
-
-.post-type-archive-gallery .lastest-gallery-section {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  .page-header {
-    @include page-header;
+  
+  .post-type-archive-gallery .featured-gallery-section {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: $margin-d;
+    .page-header {
+      @include page-header;
+    }
   }
-  .gallery-album {
+  
+  .post-type-archive-gallery .gallery-album {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     .gallery {
       width: 100%;
-      height: 321px;
+      height: 320px;
       margin: 0;
       margin-top: $margin-d;
       @include border;
-      @media screen and (min-width: $mobile_width) {
-        width: $image-d-width;
-      }
       .entry-header {
         width: 100%;
         height: 100%;
@@ -115,12 +49,12 @@
             min-height: 100%;
             max-height: 100%;
             width: auto;
-            object-fit: cover;
             min-width: 100%;
             left: 50%;
             top: 70%;
             transform: translate(-50%, -70%);
             max-width: none;
+            object-fit: cover;
             position: absolute;
           }
         }
@@ -137,8 +71,78 @@
           &:hover {
             color: $orange;
           }
+          h2 {
+            font-size: $font_m-h1;
+            @media screen and (min-width: $mobile_width) {
+              font-size: $font_d-h2;
+            }
+          }
         }
       }
     }
   }
-}
+  
+  .post-type-archive-gallery .lastest-gallery-section {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    .page-header {
+      @include page-header;
+    }
+    .gallery-album {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      align-items: center;
+      .gallery {
+        width: 100%;
+        height: 321px;
+        margin: 0;
+        margin-top: $margin-d;
+        @include border;
+        @media screen and (min-width: $mobile_width) {
+          width: $image-d-width;
+        }
+        .entry-header {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          position: relative;
+          overflow: hidden;
+          justify-content: center;
+          align-items: center;
+          .image-position {
+            height: 100%;
+            img {
+              min-height: 100%;
+              max-height: 100%;
+              width: auto;
+              object-fit: cover;
+              min-width: 100%;
+              left: 50%;
+              top: 70%;
+              transform: translate(-50%, -70%);
+              max-width: none;
+              position: absolute;
+            }
+          }
+          .entry-title {
+            background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
+            z-index: 1;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            flex-flow: column nowrap;
+            color: $black;
+            &:hover {
+              color: $orange;
+            }
+          }
+        }
+      }
+    }
+  }
