add 404.scss file, import to style.scss

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -75,3 +75,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "contact-us";
 @import "events";
 @import "single";
+@import "404";
