add search.scss file and import to style.scss

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -76,3 +76,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "events";
 @import "single";
 @import "404";
+@import "search";
