--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3332,3 +3332,73 @@ footer {
     color: #000000; }
     .error-404 .widget a:hover, .error-404 .widget a:active, .error-404 .widget a:focus {
       color: #f5a623; }
+
+/*--------------------------------------------------------------
+# Search Result Page
+--------------------------------------------------------------*/
+.search .content-area {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center; }
+  .search .content-area .site-main {
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap; }
+    .search .content-area .site-main article {
+      margin: 0; }
+      .search .content-area .site-main article header {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center;
+        position: relative;
+        background: #f5a623;
+        width: 100%;
+        min-height: 118px;
+        color: #000000; }
+        @media screen and (min-width: 480px) {
+          .search .content-area .site-main article header {
+            min-height: 160px; } }
+        .search .content-area .site-main article header .donate-btn {
+          background-color: #F91E72;
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          z-index: 3;
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center;
+          height: 2.3rem;
+          width: 2.3rem; }
+          @media screen and (min-width: 480px) {
+            .search .content-area .site-main article header .donate-btn {
+              height: 5rem;
+              width: 5rem; } }
+          .search .content-area .site-main article header .donate-btn a {
+            text-decoration: none;
+            color: #000000;
+            font-size: 1rem; }
+            @media screen and (min-width: 480px) {
+              .search .content-area .site-main article header .donate-btn a {
+                font-size: 4rem; } }
+            .search .content-area .site-main article header .donate-btn a i {
+              font-weight: lighter;
+              padding: .5rem;
+              color: #000000; }
+              .search .content-area .site-main article header .donate-btn a i:hover {
+                color: #f5a623; }
+            .search .content-area .site-main article header .donate-btn a p {
+              display: none; }
+        .search .content-area .site-main article header .entry-meta {
+          display: none; }
+    @media screen and (min-width: 480px) {
+      .search .content-area .site-main {
+        width: 1024px; } }
