--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3348,7 +3348,7 @@ footer {
     -ms-flex-flow: column nowrap;
         flex-flow: column nowrap; }
     .search .content-area .site-main article {
-      margin: 0; }
+      margin-top: 32px; }
       .search .content-area .site-main article header {
         display: -ms-flexbox;
         display: flex;
@@ -3402,3 +3402,48 @@ footer {
     @media screen and (min-width: 480px) {
       .search .content-area .site-main {
         width: 1024px; } }
+
+.search .page-title {
+  text-transform: uppercase;
+  border-bottom: #000000 2px solid;
+  padding: 64px 0 16px 0; }
+
+.search .entry-title a {
+  color: #000000;
+  text-decoration: none; }
+  .search .entry-title a:hover, .search .entry-title a:active, .search .entry-title a:focus {
+    color: #f5a623; }
+
+.search .entry-meta {
+  display: -ms-flexbox;
+  display: flex; }
+
+.search .m-button {
+  text-decoration: none;
+  color: #000000;
+  border: 2px #000000 solid transparent;
+  display: none;
+  width: initial; }
+  .search .m-button:hover, .search .m-button:active, .search .m-button:focus {
+    color: #ffffff; }
+  @media screen and (min-width: 480px) {
+    .search .m-button {
+      display: -ms-flexbox;
+      display: flex; } }
+  .search .m-button p {
+    padding: 0.3rem 1.5rem;
+    border: 2px #000000 solid;
+    margin: 0; }
+    .search .m-button p:hover, .search .m-button p:active, .search .m-button p:focus {
+      border: 2px #000000 solid #f5a623;
+      background: #f5a623;
+      z-index: 2;
+      opacity: 1; }
+    @media screen and (min-width: 480px) {
+      .search .m-button p {
+        display: -ms-flexbox;
+        display: flex;
+        padding: 0rem 3rem; } }
+
+.search .m-button {
+  display: inline-block; }
