change latest-blog to download-newsletter to front-page.php; add style to font

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -163,6 +163,9 @@
         height: 129px;
         background: $blue;
         text-align: center;
+        h1 {
+          font-size: 39px;
+        }
       }
     }
   }
