--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1299,7 +1299,9 @@ object {
         width: 100%;
         height: 129px;
         background: #45cdcb;
-        text-align: center; } }
+        text-align: center; }
+        .home .program-event-post .intro-event-blog .front-blog h1 {
+          font-size: 39px; } }
 
 .home .feature-gallery {
   display: -ms-flexbox;
